完善Tool Calling功能